Assertion failure: aBreakState[i + 1] == gfxTextRun::CompressedGlyph::FLAG_BREAK_TYPE_NONE, at /builds/worker/checkouts/gecko/dom/base/nsLineBreaker.cpp:468
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox134 | --- | unaffected |
| firefox135 | --- | unaffected |
| firefox136 | --- | verified |
People
(Reporter: tsmith, Assigned: jfkthame)
References
(Blocks 2 open bugs, Regression, )
Details
(Keywords: assertion, regression, testcase)
Attachments
(2 files)
Found while fuzzing m-c 20250130-2bc2e0070931 (--enable-debug --enable-fuzzing)
To reproduce via Grizzly Replay:
$ pip install fuzzfetch grizzly-framework --upgrade
$ python -m fuzzfetch -d --fuzzing -n firefox
$ python -m grizzly.replay.bugzilla ./firefox/firefox <bugid>
Assertion failure: aBreakState[i + 1] == gfxTextRun::CompressedGlyph::FLAG_BREAK_TYPE_NONE, at /builds/worker/checkouts/gecko/dom/base/nsLineBreaker.cpp:468
#0 0x7ef682052b70 in nsLineBreaker::FindHyphenationPoints(nsHyphenator*, char16_t const*, char16_t const*, unsigned char*) /builds/worker/checkouts/gecko/dom/base/nsLineBreaker.cpp:467:7
#1 0x7ef682054225 in nsLineBreaker::AppendText(nsAtom*, char16_t const*, unsigned int, unsigned int, nsILineBreakSink*) /builds/worker/checkouts/gecko/dom/base/nsLineBreaker.cpp:360:13
#2 0x7ef682055003 in nsLineBreaker::AppendText(nsAtom*, unsigned char const*, unsigned int, unsigned int, nsILineBreakSink*) /builds/worker/checkouts/gecko/dom/base/nsLineBreaker.cpp:513:12
#3 0x7ef685e9cde5 in BuildTextRunsScanner::SetupBreakSinksForTextRun(gfxTextRun*, void const*) /builds/worker/checkouts/gecko/layout/generic/nsTextFrame.cpp:2829:22
#4 0x7ef685e99d2a in BuildTextRunsScanner::BuildTextRunForFrames(void*) /builds/worker/checkouts/gecko/layout/generic/nsTextFrame.cpp:2600:5
#5 0x7ef685e9785f in BuildTextRunsScanner::FlushFrames(bool, bool) /builds/worker/checkouts/gecko/layout/generic/nsTextFrame.cpp:1671:17
#6 0x7ef685e9efe9 in BuildTextRuns /builds/worker/checkouts/gecko/layout/generic/nsTextFrame.cpp:1590:11
#7 0x7ef685e9efe9 in nsTextFrame::EnsureTextRun(nsTextFrame::TextRunType, mozilla::gfx::DrawTarget*, nsIFrame*, GenericLineListIterator<nsLineLink, false> const*, unsigned int*) /builds/worker/checkouts/gecko/layout/generic/nsTextFrame.cpp:3058:7
#8 0x7ef685ebc50d in nsTextFrame::AddInlinePrefISizeForFlow(gfxContext*, nsIFrame::InlinePrefISizeData*, nsTextFrame::TextRunType) /builds/worker/checkouts/gecko/layout/generic/nsTextFrame.cpp:8976:7
#9 0x7ef685ebd08b in nsTextFrame::AddInlinePrefISize(mozilla::IntrinsicSizeInput const&, nsIFrame::InlinePrefISizeData*) /builds/worker/checkouts/gecko/layout/generic/nsTextFrame.cpp:9119:10
#10 0x7ef685daef42 in operator()<nsContainerFrame *, nsIFrame::InlinePrefISizeData *> /builds/worker/checkouts/gecko/layout/generic/nsContainerFrame.cpp:815:12
#11 0x7ef685daef42 in DoInlineIntrinsicISize<nsIFrame::InlinePrefISizeData, (lambda at /builds/worker/checkouts/gecko/layout/generic/nsContainerFrame.cpp:811:25)> /builds/worker/checkouts/gecko/layout/generic/nsContainerFrameInlines.h:79:5
#12 0x7ef685daef42 in nsContainerFrame::DoInlinePrefISize(mozilla::IntrinsicSizeInput const&, nsIFrame::InlinePrefISizeData*) /builds/worker/checkouts/gecko/layout/generic/nsContainerFrame.cpp:818:3
#13 0x7ef685d6ffa8 in nsBlockFrame::PrefISize(mozilla::IntrinsicSizeInput const&) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:982:16
#14 0x7ef685d6e8dd in operator() /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:830:52
#15 0x7ef685d6e8dd in GetOrSet<(lambda at /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:828:59)> /builds/worker/workspace/obj-build/dist/include/mozilla/IntrinsicISizesCache.h:37:13
#16 0x7ef685d6e8dd in nsBlockFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:828:28
#17 0x7ef685ce175f in nsLayoutUtils::IntrinsicForAxis(mozilla::PhysicalAxis, gfxContext*, nsIFrame*, mozilla::IntrinsicISizeType, mozilla::Maybe<mozilla::LogicalSize> const&, unsigned int, int, mozilla::StyleSizeOverrides const&) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:4850:24
#18 0x7ef685ce372c in nsLayoutUtils::IntrinsicForContainer(gfxContext*, nsIFrame*, mozilla::IntrinsicISizeType, mozilla::Maybe<mozilla::LogicalSize> const&, unsigned int, mozilla::StyleSizeOverrides const&) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:5000:10
#19 0x7ef685d6fde3 in nsBlockFrame::PrefISize(mozilla::IntrinsicSizeInput const&) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:962:29
#20 0x7ef685d6e8dd in operator() /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:830:52
#21 0x7ef685d6e8dd in GetOrSet<(lambda at /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:828:59)> /builds/worker/workspace/obj-build/dist/include/mozilla/IntrinsicISizesCache.h:37:13
#22 0x7ef685d6e8dd in nsBlockFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:828:28
#23 0x7ef685ce175f in nsLayoutUtils::IntrinsicForAxis(mozilla::PhysicalAxis, gfxContext*, nsIFrame*, mozilla::IntrinsicISizeType, mozilla::Maybe<mozilla::LogicalSize> const&, unsigned int, int, mozilla::StyleSizeOverrides const&) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:4850:24
#24 0x7ef685ce372c in nsLayoutUtils::IntrinsicForContainer(gfxContext*, nsIFrame*, mozilla::IntrinsicISizeType, mozilla::Maybe<mozilla::LogicalSize> const&, unsigned int, mozilla::StyleSizeOverrides const&) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:5000:10
#25 0x7ef685d6fde3 in nsBlockFrame::PrefISize(mozilla::IntrinsicSizeInput const&) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:962:29
#26 0x7ef685d6e8dd in operator() /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:830:52
#27 0x7ef685d6e8dd in GetOrSet<(lambda at /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:828:59)> /builds/worker/workspace/obj-build/dist/include/mozilla/IntrinsicISizesCache.h:37:13
#28 0x7ef685d6e8dd in nsBlockFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:828:28
#29 0x7ef685ce175f in nsLayoutUtils::IntrinsicForAxis(mozilla::PhysicalAxis, gfxContext*, nsIFrame*, mozilla::IntrinsicISizeType, mozilla::Maybe<mozilla::LogicalSize> const&, unsigned int, int, mozilla::StyleSizeOverrides const&) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:4850:24
#30 0x7ef685ce372c in nsLayoutUtils::IntrinsicForContainer(gfxContext*, nsIFrame*, mozilla::IntrinsicISizeType, mozilla::Maybe<mozilla::LogicalSize> const&, unsigned int, mozilla::StyleSizeOverrides const&) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:5000:10
#31 0x7ef685fee299 in nsMathMLContainerFrame::GetIntrinsicISizeMetrics(gfxContext*, mozilla::ReflowOutput&) /builds/worker/checkouts/gecko/layout/mathml/nsMathMLContainerFrame.cpp:969:23
#32 0x7ef685fedaad in nsMathMLContainerFrame::UpdateIntrinsicISize(gfxContext*) /builds/worker/checkouts/gecko/layout/mathml/nsMathMLContainerFrame.cpp:937:5
#33 0x7ef685fee0d0 in nsMathMLContainerFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType) /builds/worker/checkouts/gecko/layout/mathml/nsMathMLContainerFrame.cpp:952:3
#34 0x7ef685db0c36 in GetMinISize /builds/worker/checkouts/gecko/layout/generic/nsIFrame.h:2663:12
#35 0x7ef685db0c36 in ShrinkISizeToFit /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7062:22
#36 0x7ef685db0c36 in nsIFrame::ComputeAutoSize(gfxContext*, mozilla::WritingMode, mozilla::LogicalSize const&, int, mozilla::LogicalSize const&, mozilla::LogicalSize const&, mozilla::StyleSizeOverrides const&, mozilla::EnumSet<mozilla::ComputeSizeFlag, unsigned char>) /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:6870:25
#37 0x7ef685daf4e4 in nsContainerFrame::ComputeAutoSize(gfxContext*, mozilla::WritingMode, mozilla::LogicalSize const&, int, mozilla::LogicalSize const&, mozilla::LogicalSize const&, mozilla::StyleSizeOverrides const&, mozilla::EnumSet<mozilla::ComputeSizeFlag, unsigned char>) /builds/worker/checkouts/gecko/layout/generic/nsContainerFrame.cpp:839:24
#38 0x7ef685dbd2c3 in nsIFrame::ComputeSize(gfxContext*, mozilla::WritingMode, mozilla::LogicalSize const&, int, mozilla::LogicalSize const&, mozilla::LogicalSize const&, mozilla::StyleSizeOverrides const&, mozilla::EnumSet<mozilla::ComputeSizeFlag, unsigned char>) /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:6384:7
#39 0x7ef685d26376 in mozilla::ReflowInput::InitConstraints(nsPresContext*, mozilla::Maybe<mozilla::LogicalSize> const&, mozilla::Maybe<mozilla::LogicalMargin> const&, mozilla::Maybe<mozilla::LogicalMargin> const&, mozilla::LayoutFrameType) /builds/worker/checkouts/gecko/layout/generic/ReflowInput.cpp:2348:19
#40 0x7ef685d22c54 in mozilla::ReflowInput::Init(nsPresContext*, mozilla::Maybe<mozilla::LogicalSize> const&, mozilla::Maybe<mozilla::LogicalMargin> const&, mozilla::Maybe<mozilla::LogicalMargin> const&) /builds/worker/checkouts/gecko/layout/generic/ReflowInput.cpp:414:3
#41 0x7ef685d238dd in mozilla::ReflowInput::ReflowInput(nsPresContext*, mozilla::ReflowInput const&, nsIFrame*, mozilla::LogicalSize const&, mozilla::Maybe<mozilla::LogicalSize> const&, mozilla::EnumSet<mozilla::ReflowInput::InitFlag, unsigned char>, mozilla::StyleSizeOverrides const&, mozilla::EnumSet<mozilla::ComputeSizeFlag, unsigned char>) /builds/worker/checkouts/gecko/layout/generic/ReflowInput.cpp:263:5
#42 0x7ef685d1a678 in void mozilla::Maybe<mozilla::ReflowInput>::emplace<nsPresContext*&, mozilla::ReflowInput const&, nsIFrame*&, mozilla::LogicalSize const&>(nsPresContext*&, mozilla::ReflowInput const&, nsIFrame*&, mozilla::LogicalSize const&) /builds/worker/workspace/obj-build/dist/include/mozilla/Maybe.h:1015:39
#43 0x7ef685e6af46 in nsLineLayout::ReflowFrame(nsIFrame*, nsReflowStatus&, mozilla::ReflowOutput*, bool&) /builds/worker/checkouts/gecko/layout/generic/nsLineLayout.cpp:786:23
#44 0x7ef685e6a85a in nsInlineFrame::ReflowInlineFrame(nsPresContext*, mozilla::ReflowInput const&, nsInlineFrame::InlineReflowInput&, nsIFrame*, nsReflowStatus&) /builds/worker/checkouts/gecko/layout/generic/nsInlineFrame.cpp:687:15
#45 0x7ef685e69eb6 in nsInlineFrame::ReflowFrames(nsPresContext*, mozilla::ReflowInput const&, nsInlineFrame::InlineReflowInput&, mozilla::ReflowOutput&, nsReflowStatus&) /builds/worker/checkouts/gecko/layout/generic/nsInlineFrame.cpp:561:7
#46 0x7ef685e69651 in nsInlineFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&) /builds/worker/checkouts/gecko/layout/generic/nsInlineFrame.cpp:376:3
#47 0x7ef685e6b4ac in nsLineLayout::ReflowFrame(nsIFrame*, nsReflowStatus&, mozilla::ReflowOutput*, bool&) /builds/worker/checkouts/gecko/layout/generic/nsLineLayout.cpp:841:13
#48 0x7ef685d8740f in nsBlockFrame::ReflowInlineFrame(mozilla::BlockReflowState&, nsLineLayout&, GenericLineListIterator<nsLineLink, false>, nsIFrame*, LineReflowStatus*) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:5254:15
#49 0x7ef685d862d2 in nsBlockFrame::DoReflowInlineFrames(mozilla::BlockReflowState&, nsLineLayout&, GenericLineListIterator<nsLineLink, false>, nsFlowAreaRect&, int&, nsFloatManager::SavedState*, bool*, LineReflowStatus*, bool) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:5053:5
#50 0x7ef685d82328 in nsBlockFrame::ReflowInlineFrames(mozilla::BlockReflowState&, GenericLineListIterator<nsLineLink, false>, bool*) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:4910:9
#51 0x7ef685d7e378 in nsBlockFrame::ReflowLine(mozilla::BlockReflowState&, GenericLineListIterator<nsLineLink, false>, bool*) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:3863:24
#52 0x7ef685d7757b in nsBlockFrame::ReflowDirtyLines(mozilla::BlockReflowState&) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:3367:29
#53 0x7ef685d737c2 in nsBlockFrame::TrialReflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsBlockFrame::TrialReflowState&) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:1939:35
#54 0x7ef685d71ba6 in nsBlockFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:1575:9
#55 0x7ef685d84ef4 in nsBlockReflowContext::ReflowBlock(mozilla::LogicalRect const&, bool, mozilla::CollapsingMargin&, int, nsLineBox*, mozilla::ReflowInput&, nsReflowStatus&, mozilla::BlockReflowState&) /builds/worker/checkouts/gecko/layout/generic/nsBlockReflowContext.cpp:290:11
#56 0x7ef685d80d6e in nsBlockFrame::ReflowBlockFrame(mozilla::BlockReflowState&, GenericLineListIterator<nsLineLink, false>, bool*) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:4535:11
#57 0x7ef685d7e432 in nsBlockFrame::ReflowLine(mozilla::BlockReflowState&, GenericLineListIterator<nsLineLink, false>, bool*) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:3860:5
#58 0x7ef685d7757b in nsBlockFrame::ReflowDirtyLines(mozilla::BlockReflowState&) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:3367:29
#59 0x7ef685d737c2 in nsBlockFrame::TrialReflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsBlockFrame::TrialReflowState&) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:1939:35
#60 0x7ef685d71ba6 in nsBlockFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&) /builds/worker/checkouts/gecko/layout/generic/nsBlockFrame.cpp:1575:9
#61 0x7ef685da5fa4 in nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, mozilla::WritingMode const&, mozilla::LogicalPoint const&, nsSize const&, nsIFrame::ReflowChildFlags, nsReflowStatus&, nsOverflowContinuationTracker*) /builds/worker/checkouts/gecko/layout/generic/nsContainerFrame.cpp:905:14
#62 0x7ef685d98836 in nsCanvasFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&) /builds/worker/checkouts/gecko/layout/generic/nsCanvasFrame.cpp:722:7
#63 0x7ef685da5fa4 in nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, mozilla::WritingMode const&, mozilla::LogicalPoint const&, nsSize const&, nsIFrame::ReflowChildFlags, nsReflowStatus&, nsOverflowContinuationTracker*) /builds/worker/checkouts/gecko/layout/generic/nsContainerFrame.cpp:905:14
#64 0x7ef685d39bed in mozilla::ScrollContainerFrame::ReflowScrolledFrame(mozilla::ScrollReflowInput&, bool, bool, mozilla::ReflowOutput*) /builds/worker/checkouts/gecko/layout/generic/ScrollContainerFrame.cpp:914:3
#65 0x7ef685d3a214 in mozilla::ScrollContainerFrame::ReflowContents(mozilla::ScrollReflowInput&, mozilla::ReflowOutput const&) /builds/worker/checkouts/gecko/layout/generic/ScrollContainerFrame.cpp:1030:3
#66 0x7ef685d3c753 in mozilla::ScrollContainerFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&) /builds/worker/checkouts/gecko/layout/generic/ScrollContainerFrame.cpp:1490:3
#67 0x7ef685db0fe4 in nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, int, int, nsIFrame::ReflowChildFlags, nsReflowStatus&, nsOverflowContinuationTracker*) /builds/worker/checkouts/gecko/layout/generic/nsContainerFrame.cpp:946:14
#68 0x7ef685d668b5 in mozilla::ViewportFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&) /builds/worker/checkouts/gecko/layout/generic/ViewportFrame.cpp:358:7
#69 0x7ef685c360f3 in mozilla::PresShell::DoReflow(nsIFrame*, bool, mozilla::OverflowChangedTracker*) /builds/worker/checkouts/gecko/layout/base/PresShell.cpp:10061:11
#70 0x7ef685c5effe in mozilla::PresShell::ProcessReflowCommands(bool) /builds/worker/checkouts/gecko/layout/base/PresShell.cpp:10231:22
#71 0x7ef685c3fdff in DoFlushLayout /builds/worker/checkouts/gecko/layout/base/PresShell.cpp:10278:10
#72 0x7ef685c3fdff in mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush) /builds/worker/checkouts/gecko/layout/base/PresShell.cpp:4448:9
#73 0x7ef685c04c0d in FlushPendingNotifications /builds/worker/workspace/obj-build/dist/include/mozilla/PresShell.h:1452:5
#74 0x7ef685c04c0d in nsRefreshDriver::FlushLayoutOnPendingDocsAndFixUpFocus() /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:2203:31
#75 0x7ef685c03b12 in nsRefreshDriver::Tick(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp, nsRefreshDriver::IsExtraTick) /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:2784:3
#76 0x7ef685c0ccd1 in TickDriver /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:368:13
#77 0x7ef685c0ccd1 in mozilla::RefreshDriverTimer::TickRefreshDrivers(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp, nsTArray<RefPtr<nsRefreshDriver>>&) /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:346:7
#78 0x7ef685c0cbd0 in mozilla::RefreshDriverTimer::Tick(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp) /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:362:5
#79 0x7ef685c0ca6d in mozilla::VsyncRefreshDriverTimer::RunRefreshDrivers(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp) /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:948:5
#80 0x7ef685c0bd9c in mozilla::VsyncRefreshDriverTimer::TickRefreshDriver(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp) /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:858:5
#81 0x7ef685c0b129 in mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::NotifyVsyncTimerOnMainThread() /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:593:14
#82 0x7ef685010e0b in mozilla::dom::VsyncMainChild::RecvNotify(mozilla::VsyncEvent const&, float const&) /builds/worker/checkouts/gecko/dom/ipc/VsyncMainChild.cpp:66:15
#83 0x7ef68529f2cd in mozilla::dom::PVsyncChild::OnMessageReceived(IPC::Message const&) /builds/worker/workspace/obj-build/ipc/ipdl/PVsyncChild.cpp:235:78
#84 0x7ef680aac78d in mozilla::ipc::PBackgroundChild::OnMessageReceived(IPC::Message const&) /builds/worker/workspace/obj-build/ipc/ipdl/PBackgroundChild.cpp:5284:32
#85 0x7ef680a3edab in mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1790:25
#86 0x7ef680a3bc94 in mozilla::ipc::MessageChannel::DispatchMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::UniquePtr<IPC::Message, mozilla::DefaultDelete<IPC::Message>>) /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1717:9
#87 0x7ef680a3c912 in mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::ipc::MessageChannel::MessageTask&) /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1508:3
#88 0x7ef680a3daaf in mozilla::ipc::MessageChannel::MessageTask::Run() /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1608:14
#89 0x7ef67fe77527 in mozilla::RunnableTask::Run() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:714:16
#90 0x7ef67fe6d9cd in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:1143:20
#91 0x7ef67fe6c647 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:966:15
#92 0x7ef67fe6cac5 in mozilla::TaskController::ProcessPendingMTTask(bool) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:650:36
#93 0x7ef67fe7fd79 in operator() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:354:37
#94 0x7ef67fe7fd79 in mozilla::detail::RunnableFunction<mozilla::TaskController::TaskController()::$_1>::Run() /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.h:548:5
#95 0x7ef67fe93484 in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1159:16
#96 0x7ef67fe9a11f in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:480:10
#97 0x7ef680a44b43 in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:107:5
#98 0x7ef680995321 in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:362:3
#99 0x7ef680995321 in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:344:3
#100 0x7ef68584b1e8 in nsBaseAppShell::Run() /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:148:27
#101 0x7ef68590f214 in nsAppShell::Run() /builds/worker/checkouts/gecko/widget/gtk/nsAppShell.cpp:470:33
#102 0x7ef68684176b in XRE_RunAppShell() /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:646:20
#103 0x7ef680a45a34 in mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:235:9
#104 0x7ef680995321 in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:362:3
#105 0x7ef680995321 in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:344:3
#106 0x7ef686840b9a in XRE_InitChildProcess(int, char**, XREChildData const*) /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:584:34
#107 0x650f81b6d9fe in main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:397:22
| Reporter | ||
Comment 1•1 year ago
|
||
This issue has also been detected by live site testing.
Updated•1 year ago
|
Updated•1 year ago
|
Comment 2•1 year ago
|
||
:jfkthame, since you are the author of the regressor, bug 1521723, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 3•1 year ago
|
||
I think this means that the assertion added as part of bug 1521723 was not actually justified, but I'll check exactly what's happening in the testcase to explain it. It doesn't mean anything bad is liable to happen.
| Assignee | ||
Comment 4•1 year ago
|
||
Yeah, the assertion is wrong because the breakState values might not all be FLAG_BREAK_TYPE_NONE when we call the hyphenator for a given word: in the presence of overflow-wrap:break-word or anywhere (or maybe other properties?), break positions may already have been set to FLAG_BREAK_TYPE_NORMAL.
| Assignee | ||
Comment 5•1 year ago
|
||
Updated•1 year ago
|
Comment 8•1 year ago
|
||
| bugherder | ||
Comment 9•1 year ago
|
||
Verified bug as fixed on rev mozilla-central 20250202091256-e121bc6cfed2.
Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.
Description
•