Bug 1945227 - Remove invalid assertion from line-breaker hyphenation code. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D236438